fix sidebar scrolling issue

--- a/site/index.html
+++ b/site/index.html
@@ -8,10 +8,10 @@ layout: default
     <div class="container">
       <div class="columns level">
         <div class="column is-6">
-          <h1 class="title">
+          <h1 class="bk-title">
             {{ site.title }}
           </h1>
-          <h2 class="subtitle">
+          <h2 class="bk-subtitle">
             {{ site.subtitle }}
           </h2>
           <div class="block">
