Manually update site

--- a/content/community/mailing-lists/index.html
+++ b/content/community/mailing-lists/index.html
@@ -237,6 +237,29 @@
   <li><a href="http://mail-archives.apache.org/mod_mbox/bookkeeper-dev/">Archives</a></li>
 </ul>
 
+<h2 id="issues">Issues</h2>
+
+<p>If you’d like to see updates from BookKeeper’s JIRA, Github and Jenkins and follow what’s happening in the community, please subscribe to the
+BookKeeper issues mailing list at <a href="mailto:issues@bookkeeper.apache.org">issues@bookkeeper.apache.org</a>.</p>
+
+<ul>
+  <li><a href="mailto:issues-subscribe@bookkeeper.apache.org">Subscribe</a></li>
+  <li><a href="mailto:issues-unsubscribe@bookkeeper.apache.org">Unsubscribe</a></li>
+  <li><a href="http://mail-archives.apache.org/mod_mbox/bookkeeper-issues/">Archives</a></li>
+</ul>
+
+<h3 id="mail-filters">Mail Filters</h3>
+
+<p>This mailing list contains notifications from different systems (JIRA, Github and Jenkins). Following filter rules are useful for organizing
+the emails in your inbox.</p>
+
+<ul>
+  <li>from:(git@git.apache.org) to:(issues@bookkeeper.apache.org): all the notifications from github repo.</li>
+  <li>from:(jenkins@builds.apache.org) to:(issues@bookkeeper.apache.org): all the notifications from jenkins CI.</li>
+  <li>from:(jira@apache.org) to:(dev@bookkeeper.apache.org): all the notifications from JIRA.</li>
+  <li>to:(bookkeeper@noreply.github.com, mention@noreply.github.com, ${user email}): all the notifications when you were tagged on github.</li>
+</ul>
+
 <h2 id="commits">Commits</h2>
 
 <p>If you’d like to see changes made in BookKeeper’s version control system then subscribe to the BookKeeper commit mailing list.</p>
