--- a/content/project/who/index.html
+++ b/content/project/who/index.html
@@ -232,10 +232,28 @@
       <td style="text-align: left">-8</td>
     </tr>
     <tr>
+      <td style="text-align: left">drusek</td>
+      <td style="text-align: left">Dave Rusek</td>
+      <td style="text-align: left">Twitter</td>
+      <td style="text-align: left">-7</td>
+    </tr>
+    <tr>
+      <td style="text-align: left">fcuny</td>
+      <td style="text-align: left">Franck Cuny</td>
+      <td style="text-align: left">Twitter</td>
+      <td style="text-align: left">-8</td>
+    </tr>
+    <tr>
       <td style="text-align: left">fpj</td>
       <td style="text-align: left">Flavio Junqueira</td>
       <td style="text-align: left">Microsoft</td>
       <td style="text-align: left">+1</td>
+    </tr>
+    <tr>
+      <td style="text-align: left">hsaputra</td>
+      <td style="text-align: left">Henry Saputra</td>
+      <td style="text-align: left"> </td>
+      <td style="text-align: left">-8</td>
     </tr>
     <tr>
       <td style="text-align: left">ivank</td>
@@ -251,14 +269,20 @@
     </tr>
     <tr>
       <td style="text-align: left">jujjuri</td>
-      <td style="text-align: left">JV Jujjuri</td>
+      <td style="text-align: left">Venkateswararao (JV) Jujjuri</td>
       <td style="text-align: left">Salesforce</td>
+      <td style="text-align: left">-8</td>
+    </tr>
+    <tr>
+      <td style="text-align: left">lstewart</td>
+      <td style="text-align: left">Leigh Stewart</td>
+      <td style="text-align: left">Twitter</td>
       <td style="text-align: left">-8</td>
     </tr>
     <tr>
       <td style="text-align: left">mmerli</td>
       <td style="text-align: left">Matteo Merli</td>
-      <td style="text-align: left">Yahoo Inc.</td>
+      <td style="text-align: left">Streamlio</td>
       <td style="text-align: left">-8</td>
     </tr>
     <tr>
@@ -270,7 +294,7 @@
     <tr>
       <td style="text-align: left">sijie</td>
       <td style="text-align: left">Sijie Guo</td>
-      <td style="text-align: left">Twitter</td>
+      <td style="text-align: left">Streamlio</td>
       <td style="text-align: left">-8</td>
     </tr>
     <tr>
@@ -303,16 +327,34 @@
       <td style="text-align: left">-8</td>
     </tr>
     <tr>
+      <td style="text-align: left">drusek</td>
+      <td style="text-align: left">Dave Rusek</td>
+      <td style="text-align: left">Twitter</td>
+      <td style="text-align: left">-7</td>
+    </tr>
+    <tr>
       <td style="text-align: left">eolivelli</td>
       <td style="text-align: left">Enrico Olivelli</td>
       <td style="text-align: left">Diennea</td>
       <td style="text-align: left">+2</td>
     </tr>
     <tr>
+      <td style="text-align: left">fcuny</td>
+      <td style="text-align: left">Franck Cuny</td>
+      <td style="text-align: left">Twitter</td>
+      <td style="text-align: left">-8</td>
+    </tr>
+    <tr>
       <td style="text-align: left">fpj</td>
       <td style="text-align: left">Flavio Junqueira</td>
       <td style="text-align: left">Microsoft</td>
       <td style="text-align: left">+1</td>
+    </tr>
+    <tr>
+      <td style="text-align: left">hsaputra</td>
+      <td style="text-align: left">Henry Saputra</td>
+      <td style="text-align: left"> </td>
+      <td style="text-align: left">-8</td>
     </tr>
     <tr>
       <td style="text-align: left">ivank</td>
@@ -328,14 +370,14 @@
     </tr>
     <tr>
       <td style="text-align: left">jujjuri</td>
-      <td style="text-align: left">JV Jujjuri</td>
+      <td style="text-align: left">Venkateswararao (JV) Jujjuri</td>
       <td style="text-align: left">Salesforce</td>
       <td style="text-align: left">-8</td>
     </tr>
     <tr>
       <td style="text-align: left">mmerli</td>
       <td style="text-align: left">Matteo Merli</td>
-      <td style="text-align: left">Yahoo Inc.</td>
+      <td style="text-align: left">Streamlio</td>
       <td style="text-align: left">-8</td>
     </tr>
     <tr>
@@ -365,7 +407,7 @@
     <tr>
       <td style="text-align: left">sijie</td>
       <td style="text-align: left">Sijie Guo</td>
-      <td style="text-align: left">Twitter</td>
+      <td style="text-align: left">Streamlio</td>
       <td style="text-align: left">-8</td>
     </tr>
     <tr>
@@ -377,7 +419,7 @@
     <tr>
       <td style="text-align: left">zhaijia</td>
       <td style="text-align: left">Jia Zhai</td>
-      <td style="text-align: left">EMC</td>
+      <td style="text-align: left">Streamlio</td>
       <td style="text-align: left">+8</td>
     </tr>
   </tbody>
