Add new bookkeeper logos to the site directory

--- a/site/index.html
+++ b/site/index.html
@@ -42,7 +42,7 @@ title: Home
               </div>
               <div class="column is-6">
                 <div class="container">
-                  <img src="{{ site.baseurl }}img/bk-logo.png">
+                  <img src="{{ site.baseurl }}img/logos/bk-logo.png">
                 </div>
               </div>
             </div>
